@@ -1,3 +1,10 @@
+2005-11-17  Vincent Noel <vincent.noel@gmail.com>
+
+	* logrtns.c: (log_read_dates):
+	* logview.c: (logview_add_logs_from_names):
+	* userprefs.c: (prefs_load), (prefs_save): Handle the deletion of
+	saved logs better.
+
 2005-11-17  Vincent Noel  <vincent.noel@gmail.com>
 
 	* logrtns.c (log_read_dates): Off-by-one error.
